[package]
name = "rusty-mines"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.28.1"
rand = "0.8.5"

[dev-dependencies]
criterion = { version = "4.4.1", package = "codspeed-criterion-compat" }

[[bench]]
name = "cell_render_bench"
harness = false

[[bench]]
name = "solver_bench"
harness = false
